LPD-92473 Align the issue report filters and sorts with the report fields